tools/crates/vendor/toml_edit/tests/fixtures/invalid/table/super-twice.stderr
TOML parse error at line 3, column 1
  |
3 | [a]
  | ^
invalid table header
duplicate key `a` in document root
